# StudentTask

./: College.cpp  College.h  Management.cpp  Management.h  Person.cpp  README.md  Staff.h  Student.cpp  Student.h  main.cpp
Task_1/College/: CMakeLists.txt  College.cpp  College.h  Management.cpp  Management.h  Person.cpp  Person.h  Staff.cpp  Student.cpp  Student.h  main.cpp
Task_1/ListAndVector/: CMakeLists.txt  College.cpp  College.h  Staff.cpp  Staff.h  Student.cpp  Student.h  main.cpp
